load("//bzl:rules.bzl",
     "build_module",
     "build_tool_vm",
     "compiler_library",
     "compiler_module",
     "compiler_signature",
)
load("//lex:BUILD_RULES.bzl", "run_ocamllex")

load("//config:WARNINGS.bzl", "w")

## make log: >vm uses -use-prims, >sys does not
# ./boot/ocamlrun ./boot/ocamlc
# -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats

# ./boot/ocamlrun ./ocamlopt
# -nostdlib -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats


## warnings
NAME_OUT_OF_SCOPE_40 = "40"

MODULE_OPTS = []
SIG_OPTS    = ["-strict-formats"]

## dev/test target, builds everything
# compiler_library(
#     name = "asmcomp",
#     manifest  = [
#         ":Afl_instrument",
#         ":Asmgen",
#         ":Asmlibrarian",
#         ":Asmlink",
#         ":Asmpackager",
#         ":Branch_relaxation",
#         # ":Branch_relaxation_intf_cmi",
#         ":Cmm",
#         ":Cmm_helpers",
#         ":Cmm_invariants",
#         ":Cmmgen",
#         ":Cmmgen_state",
#         ":Coloring",
#         ":Comballoc",
#         ":CSEgen",
#         ":Dataflow",
#         ":Deadcode",
#         ":Emitaux",
#         ":Interf",
#         ":Interval",
#         ":Linear",
#         ":Linearize",
#         ":Linscan",
#         ":Liveness",
#         ":Mach",
#         ":Polling",
#         ":Printcmm",
#         ":Printlinear",
#         ":Printmach",
#         ":Reg",
#         ":Reloadgen",
#         ":Schedgen",
#         ":Selectgen",
#         ":Spill",
#         ":Split",
#         ":Strmatch",

#         ## arch-dependent configured deps:
#         "CSE", "Arch", "Emit", "Proc", "Reload", "Scheduling", "Selection"

#     ] + select(
#         {
#         # "//config/arch:x86_64":
#         "@platforms//cpu:x86_64":
#         [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
#         # "//config/arch:amd64":
#         # [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
#         # "//config/arch:i386":
#         "@platforms//cpu:i386":
#         ["X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
#     }, no_match_error = "Unsupported arch"),

#     # signatures  = [
#     #     ":Emitenv_cmi",
#     #     ":X86_ast_cmi",
#     # ],
#     visibility = ["//testsuite:__pkg__"],
# )

compiler_library(
    name    = "ocamloptcomp",
    cmxa_eligible = True,
    visibility = [
        "//visibility:public",
        # "//testsuite:__pkg__",
    ],
    manifest = [
        "//middle_end:ocamlmiddleend",
        # ":optcomp",
        ":Afl_instrument",
        ":Asmgen",
        ":Asmlibrarian",
        ":Asmlink",
        ":Asmpackager",
        ":Branch_relaxation",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmm_invariants",
        ":Cmmgen",
        ":Cmmgen_state",
        ":Coloring",
        ":Comballoc",
        ":CSEgen",
        ":Dataflow",
        ":Deadcode",
        ":Emitaux",
        ":Interf",
        ":Interval",
        ":Linear",
        ":Linearize",
        ":Linscan",
        ":Liveness",
        ":Mach",
        ":Polling",
        ":Printcmm",
        ":Printlinear",
        ":Printmach",
        ":Reg",
        ":Reloadgen",
        ":Schedgen",
        ":Selectgen",
        ":Spill",
        ":Split",
        ":Strmatch",

        # ":Branch_relaxation_intf_cmi",

        "//file_formats:Linear_format",
        "//driver:Opterrors",
        "//driver:Optcompile",
        "//driver:Optmaindriver",

        ## arch-dependent configured deps:
        ":Arch",
        ":CSE",
        ":Emit",
        ":Proc",
        ":Reload",
        ":Scheduling",
        ":Selection"
    ] + select(
        # $(ARCH_SPECIFIC_ASMCOMP) = INTEL_ASM = x86_[proc,dsl,gas,masm]
        {
            #FIXME: use //platform/build?
            "//config/arch:x86_64":
            [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
            "//config/arch:i386":
            ["X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
            "//conditions:default": []
        }, no_match_error = "Unsupported arch"),
)

compiler_library(
    name = "optcomp",
    archive = 0,
    visibility = [
        "//compilerlibs:__pkg__",
        "//testsuite:__pkg__",
    ],
    manifest  = [
        ":Afl_instrument",
        ":Asmgen",
        ":Asmlibrarian",
        ":Asmlink",
        ":Asmpackager",
        ":Branch_relaxation",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmm_invariants",
        ":Cmmgen",
        ":Cmmgen_state",
        ":Coloring",
        ":Comballoc",
        ":CSEgen",
        ":Dataflow",
        ":Deadcode",
        ":Emitaux",
        ":Interf",
        ":Interval",
        ":Linear",
        ":Linearize",
        ":Linscan",
        ":Liveness",
        ":Mach",
        ":Polling",
        ":Printcmm",
        ":Printlinear",
        ":Printmach",
        ":Reg",
        ":Reloadgen",
        ":Schedgen",
        ":Selectgen",
        ":Spill",
        ":Split",
        ":Strmatch",

        # ":Branch_relaxation_intf_cmi",

        "//file_formats:Linear_format",
        "//driver:Opterrors",
        "//driver:Optcompile",
        "//driver:Optmaindriver",

        ## arch-dependent configured deps:
        ":Arch",
        ":CSE",
        ":Emit",
        ":Proc",
        ":Reload",
        ":Scheduling",
        ":Selection"
    ] + select(
        # $(ARCH_SPECIFIC_ASMCOMP) = INTEL_ASM = x86_[proc,dsl,gas,masm]
        {
            "//config/arch:x86_64":
            [":X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
            "//config/arch:i386":
            ["X86_dsl", ":X86_gas", ":X86_masm", ":X86_proc"],
            "//conditions:default": []
        }, no_match_error = "Unsupported arch"),
)

## compilerlibs/Makefile.compilerlibs:
# INTEL_ASM = \
#   asmcomp/x86_proc.cmo \
#   asmcomp/x86_dsl.cmo \
#   asmcomp/x86_gas.cmo \
#   asmcomp/x86_masm.cmo
# INTEL_ASM_CMI = \
#   asmcomp/x86_ast.cmi
# ARCH_SPECIFIC_ASMCOMP =
# ARCH_SPECIFIC_ASMCOMP_CMI =
# ifeq ($(ARCH),i386)
# ARCH_SPECIFIC_ASMCOMP = $(INTEL_ASM)
# ARCH_SPECIFIC_ASMCOMP_CMI = $(INTEL_ASM_CMI)
# endif
# ifeq ($(ARCH),amd64)
# ARCH_SPECIFIC_ASMCOMP = $(INTEL_ASM)
# ARCH_SPECIFIC_ASMCOMP_CMI = $(INTEL_ASM_CMI)
# endif
# ASMCOMP = \
#   $(ARCH_SPECIFIC_ASMCOMP) \
#   asmcomp/arch.cmo \
#   ...
# ASMCOMP_CMI = $(ARCH_SPECIFIC_ASMCOMP_CMI)


################################################################
compiler_module(
    name   = "CSE",
    struct = select({
        ## FIXME: select on xtarget or target host
        # "//platform/target:x86_64": "//asmcomp/amd64:CSE.ml",
        # "//platform/xtarget:x86_64": "//asmcomp/amd64:CSE.ml",
        # "//config/arch:x86_64": "//asmcomp/amd64:CSE.ml",

        "@platforms//cpu:x86_64": "//asmcomp/amd64:CSE.ml",
        "//config/arch:arm"   : "//asmcomp/arm:CSE.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:CSE.ml",
        "//config/arch:i386"   : "//asmcomp/i386:CSE.ml",
        "//config/arch:ppc"   : "//asmcomp/power:CSE.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:CSE.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:CSE.ml",
    }, no_match_error = "unknown arch"),
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI_70, w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        ":Cmm",
        ":CSEgen",
        ":Mach",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Bool", # arm
    ]
)

compiler_module(
    name   = "CSEgen",
    struct = "CSEgen.ml",
    sig    = "CSEgen_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:CamlinternalOO",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "CSEgen_cmi",
    src  = "CSEgen.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi",
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Afl_instrument",
    struct = "afl_instrument.ml",
    sig    = "Afl_instrument_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Lambda",
        "//utils:Clflags",
        ":Cmm",
        "//middle_end:Backend_var",
        # "//middle_end:ocamlmiddleend",
        #FIXME: bug in deps mgmt, import archive containing Backend_var
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Random",
    ]
)

compiler_signature(
    name = "Afl_instrument_cmi",
    src  = "afl_instrument.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//parsing:Asttypes_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Arch",
    sig    = ":Arch_cmi",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:arch.ml",
        "//config/arch:arm"   : "//asmcomp/arm:arch.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:arch.ml",
        "//config/arch:i386"   : "//asmcomp/i386:arch.ml",
        "//config/arch:ppc"   : "//asmcomp/power:arch.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:arch.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:arch.ml",
    }, no_match_error = "unknown arch"),
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI_70],
    deps   = [
        "//utils:Clflags"
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Arg",
    ]
)

compiler_signature(
    name   = "Arch_cmi",
    src = select({
        "//config/arch:x86_64": "//asmcomp/amd64:arch.mli",
        "//config/arch:arm"   : "//asmcomp/arm:arch.mli",
        "//config/arch:arm64"   : "//asmcomp/arm64:arch.mli",
        "//config/arch:i386"   : "//asmcomp/i386:arch.mli",
        "//config/arch:ppc"   : "//asmcomp/power:arch.mli",
        "//config/arch:riscv64"   : "//asmcomp/riscv:arch.mli",
        "//config/arch:s390x"   : "//asmcomp/s390x:arch.mli",
    }, no_match_error = "unknown arch"),
    deps = ["//lambda:Debuginfo_cmi"],
    stdlib_deps   = [
        "//stdlib:Stdlib.Arg_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Asmgen",
    struct = "asmgen.ml",
    sig    = "Asmgen_cmi",
    opts = MODULE_OPTS,
    deps   = [

        "//config:Config",
        "//file_formats:Linear_format",
        "//lambda:Translmod",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//parsing:Location",
        "//typing:Ident",
        "//typing:Primitive",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmm_invariants",
        ":Cmmgen",
        ":Coloring",
        ":Comballoc",
        ":Deadcode",
        ":Emitaux",
        ":Interf",
        ":Interval",
        ":Linear",
        ":Linearize",
        ":Linscan",
        ":Liveness",
        ":Mach",
        ":Polling",
        ":Printcmm",
        ":Printlinear",
        ":Printmach",
        ":Reg",
        ":Spill",
        ":Split",
        ## arch-specific tgts:
        ":CSE", ":Emit", ":Reload", ":Scheduling", ":Selection"
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
    ],
    visibility = [
        "//driver:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Asmgen_cmi",
    src  = "asmgen.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Backend_intf_cmi",
        "//middle_end:Clambda_cmi",
        ":Cmm_cmi",
        ":Emitaux_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Asmlibrarian",
    struct = "asmlibrarian.ml",
    sig    = "Asmlibrarian_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//middle_end/flambda:Export_info",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//parsing:Location",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        ":Asmlink",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
    ],
    visibility = ["//driver:__pkg__"]
)

compiler_signature(
    name = "Asmlibrarian_cmi",
    src  = "asmlibrarian.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Asmlink",
    struct = "asmlink.ml",
    sig    = "Asmlink_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//lambda:Runtimedef",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//parsing:Location",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        "//utils:Profile",
        ":Asmgen",
        ":Cmm",
        ":Cmm_helpers",
        ":Emit",
        ":Emitaux",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Digest",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
    ]
)

compiler_signature(
    name = "Asmlink_cmi",
    src  = "asmlink.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//middle_end:Backend_intf_cmi",
        "//utils:Misc_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Digest_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Asmpackager",
    struct = "asmpackager.ml",
    sig    = "Asmpackager_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//lambda:Simplif",
        "//lambda:Translmod",
        "//middle_end/closure:Closure_middle_end",
        "//middle_end/flambda:Export_info",
        "//middle_end/flambda:Export_info_for_pack",
        "//middle_end/flambda:Flambda_middle_end",
        "//middle_end:Clambda",
        "//middle_end:Compilation_unit",
        "//middle_end:Compilenv",
        "//parsing:Location",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Typemod",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        "//utils:Profile",
        ":Asmgen",
        ":Asmlink",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//driver:__pkg__"
    ]
)

compiler_signature(
    name = "Asmpackager_cmi",
    src  = "asmpackager.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//middle_end:Backend_intf_cmi",
        "//typing:Env_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Branch_relaxation",
    struct = "branch_relaxation.ml",
    sig    = "Branch_relaxation_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ":Linear",
        ":Mach",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Hashtbl",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Branch_relaxation_cmi",
    src  = "branch_relaxation.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Branch_relaxation_intf_cmi",
        ":Linear_cmi",
    ],
)

compiler_signature(
    name = "Branch_relaxation_intf_cmi",
    src  = "branch_relaxation_intf.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
    ],
)

# compiler_module(
#     name   = "Branch_relaxation_intf",
#     struct = "branch_relaxation_intf.ml",
#     opts = MODULE_OPTS,
#     deps   = [
#         ":Linear",
#         ":Cmm",
#         "//lambda:Debuginfo",
#         ## (Arch)
#     ],
# # )

compiler_module(
    name   = "Cmm",
    struct = "cmm.ml",
    sig    = "Cmm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//lambda:Lambda",
        "//middle_end:Backend_var",
        "//utils:Misc",
        "//utils:Targetint",
        ":Arch",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//file_formats:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Cmm_cmi",
    src  = "cmm.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//lambda:Lambda_cmi",
        "//middle_end:Backend_var_cmi",
        "//parsing:Asttypes_cmi",
        "//utils:Targetint_cmi",
    ],
    visibility = [
        "//file_formats:__pkg__",
    ]
)

compiler_module(
    name   = "Cmm_helpers",
    struct = "cmm_helpers.ml",
    sig    = "Cmm_helpers_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//typing:Primitive",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Numbers",
        ":Cmm",
        ":Cmmgen_state",
        ":Proc",
        ":Strmatch",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Marshal",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Obj",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ]
)

compiler_signature(
    name = "Cmm_helpers_cmi",
    src  = "cmm_helpers.mli",
    opts = SIG_OPTS,
    deps   = [
        "//file_formats:Cmx_format_cmi",
        "//file_formats:Cmxs_format_cmi",
        "//lambda:Debuginfo_cmi",
        "//middle_end:Clambda_cmi",
        "//parsing:Asttypes_cmi",
        "//typing:Primitive_cmi",
        ":Cmm_cmi",
        ":Cmmgen_state_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Digest_cmi",
        "//stdlib:Stdlib.Nativeint_cmi",
    ]
)

compiler_module(
    name   = "Cmm_invariants",
    struct = "cmm_invariants.ml",
    sig    = "Cmm_invariants_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Numbers",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Set",
    ]
)

compiler_signature(
    name = "Cmm_invariants_cmi",
    src  = "cmm_invariants.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Cmmgen",
    struct = "cmmgen.ml",
    sig    = "Cmmgen_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//typing:Primitive",
        "//typing:Types",
        "//utils:Clflags",
        "//utils:Misc",
        ":Afl_instrument",
        ":Arch",
        ":Cmm",
        ":Cmm_helpers",
        ":Cmmgen_state",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Obj",
        "//stdlib:Stdlib.Option",
    ]
)

compiler_signature(
    name = "Cmmgen_cmi",
    src  = "cmmgen.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Clambda_cmi",
        "//parsing:Asttypes_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Cmmgen_state",
    struct = "cmmgen_state.ml",
    sig    = "Cmmgen_state_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//middle_end:Clambda",
        "//middle_end:Compilenv",
        "//utils:Misc",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Queue",
    ]
)

compiler_signature(
    name = "Cmmgen_state_cmi",
    src  = "cmmgen_state.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Clambda_cmi",
        "//utils:Misc_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Coloring",
    struct = "coloring.ml",
    sig    = "Coloring_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Set",
    ]
)

compiler_signature(
    name = "Coloring_cmi",
    src  = "coloring.mli",
    opts = SIG_OPTS + ["-nopervasives"],
)

compiler_module(
    name   = "Comballoc",
    struct = "comballoc.ml",
    sig    = "Comballoc_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//lambda:Debuginfo",
        ":Mach",
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Comballoc_cmi",
    src  = "comballoc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

################################################################
# The preprocessor for asm generators
# cvt_emit := cvt_emit$(EXE)
# $(eval $(call PROGRAM_SYNONYM,cvt_emit))
# $(cvt_emit): cvt_emit.cmo
# 	$(CAMLC) $(LINKFLAGS) -o $@ $^

##FIXME: this should only be built as a vm executable and run once
# ocaml_tool(
build_tool_vm(
    name = "cvt_emit.byte",
    main = ":Cvt_emit",
    # opts = [
    #     "-verbose"
    # ],
    prologue = [
        "//stdlib"
        # "//stdlib:Stdlib",
        # "//stdlib:Primitives",

    #     "//stdlib:primitives",
    #     "//stdlib:Stdlib.Lexing",
    #     "//stdlib:Stdlib.Printf",
    #     "//stdlib:Stdlib.Sys",
    #     "//stdlib:Stdlib.Array",
    ],
    tags     = ["tool"],
    visibility = ["//boot:__pkg__", "//asmcomp:__subpackages__"]
)

build_module(
    name   = "Cvt_emit",
    struct = "cvt_emit_ml",
    opts = MODULE_OPTS,
    warnings = [w.MISSING_MLI_70],
    stdlib_deps   = [
        # "//stdlib",
        "//stdlib:Primitives",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Array",
    ],
)

run_ocamllex(
    name = "cvt_emit_ml",
    src  = "cvt_emit.mll",
    out  = "cvt_emit.ml"
)

compiler_module(
    name   = "Dataflow",
    struct = "dataflow.ml",
    sig    = "Dataflow_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ":Mach",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Dataflow_cmi",
    src  = "dataflow.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Deadcode",
    struct = "deadcode.ml",
    sig    = "Deadcode_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Numbers",
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Deadcode_cmi",
    src  = "deadcode.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

# asmcomp/emit.ml: asmcomp/$(ARCH)/emit.mlp $(cvt_emit)
# 	echo \# 1 \"$(ARCH)/emit.mlp\" > $@
# 	$(OCAMLRUN) $(cvt_emit) < $< >> $@ \
# 	|| { rm -f $@; exit 2; }

compiler_module(
    name   = "Emit",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:emit.ml",
        "//config/arch:arm"   : "//asmcomp/arm:emit.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:emit.ml",
        "//config/arch:i386"   : "//asmcomp/i386:emit.ml",
        "//config/arch:ppc"   : "//asmcomp/power:emit.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:emit.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:emit.ml",
    }, no_match_error = "unknown arch"),
    sig = "Emit_cmi",
    opts = MODULE_OPTS,
    deps   = [ ## FIXME: deps may depend on selected source
        ## so mv this target to pltform subdirs?
        "//middle_end:Compilenv",
        "//utils:Domainstate",
        ":Branch_relaxation",
        ":Emitaux",
        ":Proc",
        ":X86_dsl",
        ":X86_gas",
        ":X86_masm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array", # for amd64
    ],
    visibility = ["//testsuite:__subpackages__"]
)

compiler_signature(
    name = "Emit_cmi",
    src  = "emit.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
    ],
)

compiler_module(
    name   = "Emitaux",
    struct = "emitaux.ml",
    sig    = "Emitaux_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//config:Config",
        "//lambda:Debuginfo",
        "//utils:Clflags",
        ":Arch",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int32",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Emitaux_cmi",
    src  = "emitaux.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        ":Cmm_cmi",
        ":Emitenv_cmi",
        ":Linear_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_signature(
    name = "Emitenv_cmi",
    src  = "emitenv.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
    ],
)

compiler_module(
    name   = "Interf",
    struct = "interf.ml",
    sig    = "Interf_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Set",
    ]
)

compiler_signature(
    name = "Interf_cmi",
    src  = "interf.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Interval",
    struct = "interval.ml",
    sig    = "Interval_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Interval_cmi",
    src  = "interval.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
)

compiler_module(
    name   = "Linear",
    struct = "linear.ml",
    sig    = "Linear_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        ":Cmm",
        ":Mach",
        ":Reg",
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//file_formats:__subpackages__"
    ]
)

compiler_signature(
    name = "Linear_cmi",
    src  = "linear.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
    visibility = ["//file_formats:__pkg__"]
)

compiler_module(
    name   = "Linearize",
    struct = "linearize.ml",
    sig    = "Linearize_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//lambda:Debuginfo",
        "//utils:Misc",
        ":Cmm",
        ":Linear",
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Linearize_cmi",
    src  = "linearize.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Linscan",
    struct = "linscan.ml",
    sig    = "Linscan_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        ":Interval",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Linscan_cmi",
    src  = "linscan.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Interval_cmi"
    ],
)

compiler_module(
    name   = "Liveness",
    struct = "liveness.ml",
    sig    = "Liveness_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Misc",
        ":Dataflow",
        ":Mach",
        ":Printmach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ]
)

compiler_signature(
    name = "Liveness_cmi",
    src  = "liveness.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Mach",
    struct = "mach.ml",
    sig    = "Mach_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ]
)

compiler_signature(
    name = "Mach_cmi",
    src  = "mach.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Arch_cmi",
        ":Reg_cmi",
    ],
)

compiler_module(
    name   = "Polling",
    struct = "polling.ml",
    sig    = "Polling_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//utils:Misc",
        "//utils:Numbers",
        ":Cmm",
        ":Dataflow",
        ":Mach",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Polling_cmi",
    src  = "polling.mli",
    opts = SIG_OPTS,
    deps   = [
        "//utils:Misc_cmi",
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Printcmm",
    struct = "printcmm.ml",
    sig    = "Printcmm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//utils:Clflags",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
    ]
)

compiler_signature(
    name = "Printcmm_cmi",
    src  = "printcmm.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//parsing:Asttypes_cmi",
        ":Cmm_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Printlinear",
    struct = "printlinear.ml",
    sig    = "Printlinear_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//utils:Clflags",
        ":Cmm",
        ":Linear",
        ":Mach",
        ":Printmach",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
    ]
)

compiler_signature(
    name = "Printlinear_cmi",
    src  = "printlinear.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Printmach",
    struct = "printmach.ml",
    sig    = "Printmach_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//lambda:Debuginfo",
        "//utils:Clflags",
        ":Cmm",
        ":Interval",
        ":Mach",
        ":Printcmm",
        ":Proc",
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
    ]
)

compiler_signature(
    name = "Printmach_cmi",
    src  = "printmach.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Interval_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Proc",
    struct = select({
        ## supported archs: amd64, arm, arm64, i386, power, riscv, s390x
        ## NB: amd64 == x86_64
        "//config/arch:x86_64": "//asmcomp/amd64:proc.ml",
        "//config/arch:arm"   : "//asmcomp/arm:proc.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:proc.ml",
        "//config/arch:i386"   : "//asmcomp/i386:proc.ml",
        "//config/arch:ppc"   : "//asmcomp/power:proc.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:proc.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:proc.ml",
    }, no_match_error = "unknown arch"),
    sig    = "Proc_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Arch",
        ":Cmm",
        ":Mach",
        ":Reg",
        ":X86_proc",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ],
    visibility = [
        # "//asmcomp:__subpackages__"
        "//driver:__pkg__",
        "//toplevel/native:__pkg__"
    ]
)

compiler_signature(
    name = "Proc_cmi",
    src  = "proc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_module(
    name   = "Reg",
    struct = "reg.ml",
    sig    = "Reg_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//middle_end:Backend_var",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.String",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reg_cmi",
    src  = "reg.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Backend_var_cmi",
        ":Cmm_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Map_cmi",
        "//stdlib:Stdlib.Set_cmi",
    ]
)

compiler_module(
    name   = "Reload",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:reload.ml",
        "//config/arch:arm"   : "//asmcomp/arm:reload.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:reload.ml",
        "//config/arch:i386"   : "//asmcomp/i386:reload.ml",
        "//config/arch:ppc"   : "//asmcomp/power:reload.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:reload.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:reload.ml",
    }, no_match_error = "unknown arch"),
    sig    = "Reload_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Misc",
        ":Reloadgen",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reload_cmi",
    src  = "reload.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Reloadgen",
    struct = "reloadgen.ml",
    sig    = "Reloadgen_cmi",
    opts = MODULE_OPTS,
    use_prims = True,
    deps   = [
        "//utils:Misc",
        ":Cmm",
        ":Mach",
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
        "//stdlib:CamlinternalOO",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Reloadgen_cmi",
    src  = "reloadgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
)


compiler_module(
    name   = "Schedgen",
    struct = "schedgen.ml",
    sig    = "Schedgen_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//utils:Clflags",
        ":Cmm",
        ":Linear",
        ":Mach",
        ":Proc",
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:CamlinternalOO",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Schedgen_cmi",
    src  = "schedgen.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Linear_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Scheduling",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:scheduling.ml",
        "//config/arch:arm"   : "//asmcomp/arm:scheduling.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:scheduling.ml",
        "//config/arch:i386"   : "//asmcomp/i386:scheduling.ml",
        "//config/arch:ppc"   : "//asmcomp/power:scheduling.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:scheduling.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:scheduling.ml",
    }, no_match_error = "unknown arch"),
    sig = "Scheduling_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//asmcomp:Schedgen",
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Scheduling_cmi",
    src  = "scheduling.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Linear_cmi",
        ":Cmm_cmi",
    ],
)

compiler_module(
    name   = "Selection",
    struct = select({
        "//config/arch:x86_64": "//asmcomp/amd64:selection.ml",
        "//config/arch:arm"   : "//asmcomp/arm:selection.ml",
        "//config/arch:arm64"   : "//asmcomp/arm64:selection.ml",
        "//config/arch:i386"   : "//asmcomp/i386:selection.ml",
        "//config/arch:ppc"   : "//asmcomp/power:selection.ml",
        "//config/arch:riscv64"   : "//asmcomp/riscv:selection.ml",
        "//config/arch:s390x"   : "//asmcomp/s390x:selection.ml",
    }, no_match_error = "unknown arch"),
    sig = "Selection_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Cmm",
        ":Mach",
        ":Selectgen",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_module(
    name   = "Selectgen",
    struct = "selectgen.ml",
    sig    = "Selectgen_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        "//utils:Misc",
        "//utils:Numbers",
        ":Cmm",
        ":Mach",
        ":Polling",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": [
    #         "//asmcomp/amd64:Proc",
    #     ]
    # }, no_match_error = "unknown arch"),
    ],
    stdlib_deps = [
        "//stdlib:CamlinternalOO",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "Selectgen_cmi",
    src  = "selectgen.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//middle_end:Backend_var_cmi",
        "//parsing:Asttypes_cmi",
        "//utils:Misc_cmi",
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Reg_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Primitives_cmi",
    ]
)

compiler_signature(
    name = "Selection_cmi",
    src  = "selection.mli",
    opts = SIG_OPTS,
    deps   = [
        "//utils:Misc_cmi",
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Spill",
    struct = "spill.ml",
    sig    = "Spill_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Clflags",
        ":Cmm",
        ":Mach",
        ":Proc",
        ":Reg",
    # ] + select({
    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
    # }, no_match_error = "unsupported arch"),
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Spill_cmi",
    src  = "spill.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
        ":Proc_cmi"
   ],
)

compiler_module(
    name   = "Split",
    struct = "split.ml",
    sig    = "Split_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Misc",
        ":Cmm",
        ":Mach",
        ":Reg",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.List",
    ]
)

compiler_signature(
    name = "Split_cmi",
    src  = "split.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Cmm_cmi",
        ":Mach_cmi",
    ],
)

compiler_module(
    name   = "Strmatch",
    struct = "strmatch.ml",
    sig    = "Strmatch_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//lambda:Debuginfo",
        "//middle_end:Backend_var",
        ":Arch",
        ":Cmm",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.Nativeint",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Set",
        "//stdlib:Stdlib.String",
    ]
)

compiler_signature(
    name = "Strmatch_cmi",
    src  = "strmatch.mli",
    opts = SIG_OPTS,
    deps   = [
        "//lambda:Debuginfo_cmi",
        "//parsing:Asttypes_cmi",
        ":Cmm_cmi",
    ],
)

compiler_signature(
    name = "X86_ast_cmi",
    src  = "x86_ast.mli",
    opts = SIG_OPTS + ["-nopervasives"],
)

compiler_module(
    name   = "X86_dsl",
    struct = "x86_dsl.ml",
    sig    = "X86_dsl_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":X86_proc",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Int64",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_dsl_cmi",
    src  = "x86_dsl.mli",
    opts = SIG_OPTS + ["-nopervasives"],
    deps   = [
        ":X86_ast_cmi",
    ],
)

compiler_module(
    name   = "X86_gas",
    struct = "x86_gas.ml",
    sig    = "X86_gas_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Misc",
        ":X86_proc",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Buffer",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_gas_cmi",
    src  = "x86_gas.mli",
    opts = SIG_OPTS,
    deps   = [
        ":X86_ast_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib_cmi",
    ]
)

compiler_module(
    name   = "X86_masm",
    struct = "x86_masm.ml",
    sig    = "X86_masm_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":X86_proc",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Buffer",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_masm_cmi",
    src  = "x86_masm.mli",
    opts = SIG_OPTS,
    deps   = [
        ":X86_ast_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib_cmi",
    ]
)

compiler_module(
    name   = "X86_proc",
    struct = "x86_proc.ml",
    sig    = "X86_proc_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE_40],
    deps   = [
        "//config:Config",
        "//utils:Ccomp",
        "//utils:Clflags",
        "//utils:Misc",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Buffer",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

compiler_signature(
    name = "X86_proc_cmi",
    src  = "x86_proc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":X86_ast_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Buffer_cmi",
    ]
)

################################################################
################
## ocamloptcomp.[cma,cmxa]
# ASMCOMP = \
#   $(ARCH_SPECIFIC_ASMCOMP) \
#   asmcomp/arch.cmo \
#   ... etc...
# OPTCOMP = $(MIDDLE_END) $(ASMCOMP)
# OPTCOMP_CMI = $(MIDDLE_END_CMI) $(ASMCOMP_CMI)

# compilerlibs/ocamloptcomp.cma: $(OPTCOMP_CMI) $(OPTCOMP)
# 	$(CAMLC) -a -o $@ $(OPTCOMP)

